manifests/tenants/my-tenant/company-services/oxicloud/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-tenant-oxicloud
  labels:
    app.kubernetes.io/managed-by: company-as-code
