manifests/tenants/my-tenant/company-services/oxicloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oxicloud
  namespace: my-tenant-oxicloud
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: oxicloud
  ports:
    - name: http
      port: 80
      targetPort: 8086
